--- a/Temperature_prediction.ipynb
+++ b/Temperature_prediction.ipynb
@@ -29,30 +29,172 @@
       "metadata": {
         "id": "1CKdSY0BVNPN",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "outputId": "626a9956-6bf6-4176-a280-f9c1387a6cd2"
       },
       "cell_type": "code",
       "source": [
         "# Pandas is used for data manipulation\n",
         "import pandas as pd\n",
         "\n",
-        "url = 'https://raw.githubusercontent.com/KrShaswat/Youtube-Helping_Material/master/temps.csv'\n",
+        "url = 'https://raw.githubusercontent.com/aditishraq/Temperature_Prediction/master/temps.csv'\n",
         "\n",
         "# Read in data and display first 5 rows\n",
         "features = pd.read_csv(url)\n",
-        "features.head(30)"
+        "features.head(5)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>year</th>\n",
+              "      <th>month</th>\n",
+              "      <th>day</th>\n",
+              "      <th>week</th>\n",
+              "      <th>temp_2</th>\n",
+              "      <th>temp_1</th>\n",
+              "      <th>average</th>\n",
+              "      <th>actual</th>\n",
+              "      <th>forecast_noaa</th>\n",
+              "      <th>forecast_acc</th>\n",
+              "      <th>forecast_under</th>\n",
+              "      <th>friend</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2016</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Fri</td>\n",
+              "      <td>45</td>\n",
+              "      <td>45</td>\n",
+              "      <td>45.6</td>\n",
+              "      <td>45</td>\n",
+              "      <td>43</td>\n",
+              "      <td>50</td>\n",
+              "      <td>44</td>\n",
+              "      <td>29</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2016</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>Sat</td>\n",
+              "      <td>44</td>\n",
+              "      <td>45</td>\n",
+              "      <td>45.7</td>\n",
+              "      <td>44</td>\n",
+              "      <td>41</td>\n",
+              "      <td>50</td>\n",
+              "      <td>44</td>\n",
+              "      <td>61</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>2016</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Sun</td>\n",
+              "      <td>45</td>\n",
+              "      <td>44</td>\n",
+              "      <td>45.8</td>\n",
+              "      <td>41</td>\n",
+              "      <td>43</td>\n",
+              "      <td>46</td>\n",
+              "      <td>47</td>\n",
+              "      <td>56</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>2016</td>\n",
+              "      <td>1</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Mon</td>\n",
+              "      <td>44</td>\n",
+              "      <td>41</td>\n",
+              "      <td>45.9</td>\n",
+              "      <td>40</td>\n",
+              "      <td>44</td>\n",
+              "      <td>48</td>\n",
+              "      <td>46</td>\n",
+              "      <td>53</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>2016</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>Tues</td>\n",
+              "      <td>41</td>\n",
+              "      <td>40</td>\n",
+              "      <td>46.0</td>\n",
+              "      <td>44</td>\n",
+              "      <td>46</td>\n",
+              "      <td>46</td>\n",
+              "      <td>46</td>\n",
+              "      <td>41</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   year  month  day  week  temp_2  temp_1  average  actual  forecast_noaa  \\\n",
+              "0  2016      1    1   Fri      45      45     45.6      45             43   \n",
+              "1  2016      1    2   Sat      44      45     45.7      44             41   \n",
+              "2  2016      1    3   Sun      45      44     45.8      41             43   \n",
+              "3  2016      1    4   Mon      44      41     45.9      40             44   \n",
+              "4  2016      1    5  Tues      41      40     46.0      44             46   \n",
+              "\n",
+              "   forecast_acc  forecast_under  friend  \n",
+              "0            50              44      29  \n",
+              "1            50              44      61  \n",
+              "2            46              47      56  \n",
+              "3            48              46      53  \n",
+              "4            46              46      41  "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
     },
     {
       "metadata": {
         "id": "EFagPmuuW3ZC",
         "colab_type": "code",
-        "outputId": "11e81f42-1e6c-4b00-8b0f-42f375ca07fa",
+        "outputId": "b9435dd6-fcf9-4e2c-f2c9-e95313f9297f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "cell_type": "code",
@@ -62,7 +204,7 @@
         "#Information on Data - Set\n",
         "print('The shape of our features is:', features.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,7 +219,7 @@
       "metadata": {
         "id": "Y2ETc6wNXNYz",
         "colab_type": "code",
-        "outputId": "0a3d94c3-e094-433e-8629-abaca5cc16d5",
+        "outputId": "765ad7a7-7b51-41fd-8b81-108062fd44b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 300
@@ -90,7 +232,7 @@
         "# Descriptive statistics for each column\n",
         "features.describe()"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,7 +411,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -277,10 +419,10 @@
       "metadata": {
         "id": "SJG5rkUkYD9j",
         "colab_type": "code",
-        "outputId": "e6c17fc4-2240-4fc9-d09f-c840706cffdb",
+        "outputId": "33eb0879-b9f5-491b-d9c4-38fd1c88276a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 226
         }
       },
       "cell_type": "code",
@@ -292,7 +434,7 @@
         "# Display the first 5 rows of the last 12 columns\n",
         "features.iloc[:,5:].head(5)"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,7 +577,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -521,10 +663,10 @@
       "metadata": {
         "id": "hjK393B9YY-y",
         "colab_type": "code",
-        "outputId": "2b1ce2c8-34e6-4f47-a3db-7d1519d4193a",
+        "outputId": "43003dc4-4507-42c0-b065-f595946de993",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 90
+          "height": 86
         }
       },
       "cell_type": "code",
@@ -534,7 +676,7 @@
         "print('Testing Features Shape:', test_features.shape)\n",
         "print('Testing Labels Shape:', test_labels.shape)"
       ],
-      "execution_count": 0,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,10 +694,10 @@
       "metadata": {
         "id": "AZbrzQ4KYcPy",
         "colab_type": "code",
-        "outputId": "d4533b20-1fd7-4938-f0cc-3b60f3328726",
+        "outputId": "89b237a5-9ac2-4b76-bac8-f82e4cdce44c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "cell_type": "code",
@@ -566,7 +708,7 @@
         "baseline_errors = abs(baseline_preds - test_labels)\n",
         "print('Average baseline error: ', round(np.mean(baseline_errors), 2))"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -599,10 +741,10 @@
       "metadata": {
         "id": "vaVaEnviYiUa",
         "colab_type": "code",
-        "outputId": "1e011a0b-e284-4677-8110-f52782bb7365",
+        "outputId": "d120d39f-86ee-4243-edb4-173c4d980841",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "cell_type": "code",
@@ -616,7 +758,7 @@
         "# Print out the mean absolute error (mae)\n",
         "print('Mean Absolute Error:', round(np.mean(errors), 2), 'degrees.')"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,10 +773,10 @@
       "metadata": {
         "id": "8gH1qY_5YpMb",
         "colab_type": "code",
-        "outputId": "3bc19cc7-4815-4a02-c9d6-964d26311750",
+        "outputId": "4d714120-594c-49d0-946c-78ef77911a7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "cell_type": "code",
@@ -645,7 +787,7 @@
         "accuracy = 100 - np.mean(mape)\n",
         "print('Accuracy:', round(accuracy, 2), '%.')"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -655,19 +797,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "metadata": {
-        "id": "ep2uwkXXYsTb",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
